--- a/CreateEntity/App.config
+++ b/CreateEntity/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    
+    <add key="CreateType" value="CSharp,Java"/>
   </appSettings>
 
   <connectionStrings>
     <add name="MSSQLConnect" connectionString="server=.;Initial Catalog=IYASAKA_NET;User Id=sa;Password=123456;"/>
   </connectionStrings>
   
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
